Reduced flickering by only rendering post when changed. Stopped posts lists refetching and rendering if just looking at a post from that list

--- a/src/components/Topics.css
+++ b/src/components/Topics.css
@@ -2,6 +2,7 @@
   font-size: 2.2rem;
   color: var(--main-text);
   text-align: center;
+  text-transform: capitalize;
 }
 
 .topics-list {
@@ -23,7 +24,7 @@
   font-size: 1.4rem;
   line-height: 1.4rem;
   color: var(--dull-blue);
-
+  text-transform: capitalize;
 }
 
 .topics-list a:hover {
